<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gdg_logo"
        android:id="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:text="Lima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp" />

    <RadioButton
        android:text="RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/radioButton2"
        android:layout_marginBottom="16dp" />

    <RadioButton
        android:text="RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton2"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintRight_toRightOf="@+id/radioButton"
        app:layout_constraintBottom_toTopOf="@+id/radioButton3"
        android:layout_marginBottom="16dp" />

    <RadioButton
        android:text="RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton3"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        android:layout_marginBottom="24dp" />

    <SeekBar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        app:layout_constraintLeft_toLeftOf="@+id/radioButton3"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        android:layout_marginBottom="16dp" />

    <CheckedTextView
        android:text="CheckedTextView"
        android:layout_width="112dp"
        android:layout_height="16dp"
        android:id="@+id/checkedTextView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/textView"
        android:layout_marginRight="128dp"
        android:layout_marginEnd="128dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.25" />

</android.support.constraint.ConstraintLayout>